--- a/contact.html
+++ b/contact.html
@@ -47,9 +47,9 @@
             <div class="row gx-0 align-items-center" style="height: 45px;">
                 <div class="col-lg-6 text-center text-lg-start mb-lg-0">
                     <div class="d-flex flex-wrap">
-                        <a href="#" class="text-muted me-4"><i class="fas fa-map-marker-alt text-secondary me-2"></i>Find A Location</a>
-                        <a href="#" class="text-muted me-4"><i class="fas fa-phone-alt text-secondary me-2"></i>+01234567890</a>
-                        <a href="#" class="text-muted me-0"><i class="fas fa-envelope text-secondary me-2"></i>Example@gmail.com</a>
+                        <a href="https://www.google.com/maps/place/28%C2%B047'15.8%22N+77%C2%B031'24.9%22E/@28.7877196,77.5210141,17z/data=!3m1!4b1!4m4!3m3!8m2!3d28.7877196!4d77.523589?entry=ttu" target="_blank" class="text-muted me-4"><i class="fas fa-map-marker-alt text-secondary me-2"></i>Find A Location</a>
+                        <a href="#" class="text-muted me-4"><i class="fas fa-phone-alt text-secondary me-2"></i>+919289754421</a>
+                        <a href="#" class="text-muted me-0"><i class="fas fa-envelope text-secondary me-2"></i>info@mapsonind.com</a>
                     </div>
                 </div>
                 <div class="col-lg-6 text-center text-lg-end">
@@ -79,7 +79,7 @@
                 <div class="collapse navbar-collapse" id="navbarCollapse">
                     <div class="navbar-nav ms-auto pt-2 pt-lg-0">
                         <a href="index.html" class="nav-item nav-link">Home</a>
-                        <a href="about.html" class="nav-item nav-link">About</a>
+                        <!-- <a href="about.html" class="nav-item nav-link">About</a>
                         <a href="service.html" class="nav-item nav-link">Services</a>
                         <a href="project.html" class="nav-item nav-link">Projects</a>
                         <div class="nav-item dropdown">
@@ -91,12 +91,12 @@
                                 <a href="testimonial.html" class="dropdown-item">Testimonial</a>
                                 <a href="404.html" class="dropdown-item">404 Page</a>
                             </div>
-                        </div>
+                        </div> -->
                         <a href="contact.html" class="nav-item nav-link active">Contact</a>
                     </div>
                     <div class="d-flex align-items-center flex-nowrap pt-3  pt-lg-0 ms-lg-2">
                         <button class="btn btn-primary py-2 px-3" data-bs-toggle="modal" data-bs-target="#searchModal"><i class="fas fa-search"></i></button>
-                        <a href="#" class="btn btn-secondary py-2 px-4 ms-3 flex-wrap flex-sm-shrink-0">Get a Quate</a>
+                        <a href="#" class="btn btn-secondary py-2 px-4 ms-3 flex-wrap flex-sm-shrink-0">Go to Mail</a>
                     </div>
                 </div>
             </nav>
@@ -192,7 +192,7 @@
                     <div class="col-lg-6 wow fadeInRight" data-wow-delay="0.4s">
                         <div class="contact-map h-100 w-100">
                             <iframe class="h-100 w-100" 
-                            style="height: 500px;" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5881.5589447570255!2d77.50302529529594!3d28.773416445119096!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390cf44b92918cb5%3A0x7d4e255f788cc0e9!2sMuradnagar%2C%20Uttar%20Pradesh%20201206!5e0!3m2!1sen!2sin!4v1716920221807!5m2!1sen!2sin" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                            style="height: 500px;" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2940.389039168983!2d77.52322367938584!3d28.7872654921836!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390cfa810e74e669%3A0x84fe6d0da6b5d85a!2sMMtech%20industries!5e0!3m2!1sen!2sin!4v1717470813942!5m2!1sen!2sin" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                         </div>
                     </div>
                 </div>
@@ -202,7 +202,7 @@
                             <i class="fas fa-map-marker-alt fa-2x text-secondary me-4"></i>
                             <div>
                                 <h4>Address</h4>
-                                <p class="mb-0">Muradnagar, UP, India</p>
+                                <p class="mb-0">Abupur, Industrial Area, Delhi Meerut Road, Muradnagar, Uttar Pradesh 201206</p>
                             </div>
                         </div>
                     </div>
@@ -211,7 +211,8 @@
                             <i class="fas fa-envelope fa-2x text-secondary me-4"></i>
                             <div>
                                 <h4>Mail Us</h4>
-                                <p class="mb-0">info@example.com</p>
+                                <p class="mb-0">For Query:</p>
+                                <p class="mb-0">info@mapsonind.com</p>
                             </div>
                         </div>
                     </div>
@@ -220,7 +221,8 @@
                             <i class="fa fa-phone-alt fa-2x text-secondary me-4"></i>
                             <div>
                                 <h4>Telephone</h4>
-                                <p class="mb-0">(+012) 3456 7890 123</p>
+                                <p class="mb-0">Ph:</p>
+                                <p class="mb-0">+919289754421</p>
                             </div>
                         </div>
                     </div>
@@ -272,11 +274,10 @@
                     <div class="col-md-6 col-lg-6 col-xl-3">
                         <div class="footer-item d-flex flex-column">
                             <h4 class="text-white mb-4">Contact Info</h4>
-                            <a href=""><i class="fa fa-map-marker-alt me-2"></i> Muradnagar, UP, India</a>
-                            <a href=""><i class="fas fa-envelope me-2"></i> info@example.com</a>
-                            <a href=""><i class="fas fa-envelope me-2"></i> info@example.com</a>
-                            <a href=""><i class="fas fa-phone me-2"></i> +012 345 67890</a>
-                            <a href="" class="mb-3"><i class="fas fa-print me-2"></i> +012 345 67890</a>
+                            <a href=""><i class="fa fa-map-marker-alt me-2"></i> Abupur, Industrial Area, Muradnagar, Uttar Pradesh 201206</a>
+                            <a href=""><i class="fas fa-envelope me-2"></i> info@mapsonind.com</a>
+                            <a href=""><i class="fas fa-phone me-2"></i> +919289754421</a>
+                            <a href="" class="mb-3"><i class="fas fa-print me-2"></i> +919289754421</a>
                             <div class="footer-btn d-flex align-items-center">
                                 <a class="btn btn-secondary btn-md-square me-2" href=""><i class="fab fa-facebook-f text-white"></i></a>
                                 <a class="btn btn-secondary btn-md-square me-2" href=""><i class="fab fa-twitter text-white"></i></a>
